--- a/public/assets/css/main.scss
+++ b/public/assets/css/main.scss
@@ -162,6 +162,10 @@ nav {
                 max-height: 100px;
                 object-fit: contain;
                 object-position: left;
+
+                @media (max-width: 767.98px) {
+                    object-position: center;
+                }
             }
 
             @media only screen and (max-width: 600px) {
@@ -408,3 +412,7 @@ footer {
         color: #ffffff;
     }
 }
+
+
+
+// timeline
