--- a/public/assets/css/main.scss
+++ b/public/assets/css/main.scss
@@ -154,39 +154,7 @@ nav {
     .keuntungan-item-container {
         margin-top: 25px;
 
-        .card {
-            border: 0;
-            margin-left: 0;
 
-            img {
-                max-height: 100px;
-                object-fit: contain;
-                object-position: left;
-
-                @media (max-width: 767.98px) {
-                    object-position: center;
-                }
-            }
-
-            @media only screen and (max-width: 600px) {
-                .card-body {
-                    height: 100%;
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                }
-            }
-        }
-
-        .card-body {
-            padding: 0;
-        }
-
-        .content-body {
-            p {
-                font-weight: 300;
-            }
-        }
     }
 }
 
@@ -201,21 +169,7 @@ nav {
             text-align: center;
         }
 
-        .keuntungan-item-container {
-            img {
-                // left: 50%;
-                // top: 50%;
-                // transform: translate(-50%, -50%);
-            }
-
-            .content-body {
-
-                h4,
-                p {
-                    text-align: center;
-                }
-            }
-        }
+        .keuntungan-item-container {}
     }
 }
 
